# ml

lab_01/: config.yaml  pyproject.toml
lab_01/src/: data.py  evaluate.py  main.py  visualize.py
lab_02/: .gitignore  config.yaml  pyproject.toml
lab_02/src/: config.py  data.py  evaluate.py  main.py  model.py  train.py  visualize.py
lab_03/: .gitignore  dvc.yaml  params.yaml  pyproject.toml
lab_03/.dvc/: config
lab_03/src/: data.py  download.py  evaluate.py  model.py  train.py
src/: config.py  model.py  train.py
